feat: create the hydration wrapper

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,7 +7,7 @@
 @layer base {
   html,
   body {
-    font-family: "Gelion", system-ui, sans-serif;
+    font-family: "Poppins", "Inter", sans-serif;
     min-width: auto;
   }
   /* body {
